RESOLVED FIXED106701
Fix function name typo ProgramExecutable::initalizeGlobalProperties()
https://bugs.webkit.org/show_bug.cgi?id=106701
Summary Fix function name typo ProgramExecutable::initalizeGlobalProperties()
Pratik Solanki
Reported 2013-01-11 14:22:10 PST
initalizeGlobalProperties -> initializeGlobalProperties
Attachments
Patch (2.83 KB, patch)
2013-01-11 14:23 PST, Pratik Solanki
ggaren: review+
Pratik Solanki
Comment 1 2013-01-11 14:23:54 PST
Geoffrey Garen
Comment 2 2013-01-11 14:54:10 PST
Comment on attachment 182416 [details] Patch r=me
Pratik Solanki
Comment 3 2013-01-11 15:34:17 PST
Note You need to log in before you can comment on or make changes to this bug.