Fix function name typo ProgramExecutable::initalizeGlobalProperties() https://bugs.webkit.org/show_bug.cgi?id=106701

Reviewed by Geoffrey Garen.

* interpreter/Interpreter.cpp:
(JSC::Interpreter::execute):
* runtime/Executable.cpp:
(JSC::ProgramExecutable::initializeGlobalProperties):
* runtime/Executable.h:

Canonical link: https://commits.webkit.org/124924@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139510 268f45cc-cd09-0410-ab3c-d52691b4dbfc